tests/testcases/errors/BCE0024-4.boo
"""
BCE0024-4.boo(4,7): BCE0024: The type 'BooCompiler.Tests.SupportingClasses.NoParameterlessConstructor' does not have a visible constructor that matches the argument list '()'.
"""
class Bar(BooCompiler.Tests.SupportingClasses.NoParameterlessConstructor):
	pass
